--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,7 @@ $background-color: lighten($main-color, 40%);
 // LAYOUT
 
 body {
-  background-color: black;
+  background-color: white;
   color: $main-color;
   display: flex;
   flex-direction: column;
@@ -30,4 +30,33 @@ body {
 // TYPOGRAPHY
 h2 {
   font-size: 3rem;
+}
+
+#blocker {
+  position: absolute;
+  color: white;
+  top: 50%;
+	width: 100%;
+	height: 100vh;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 10;
+}
+#instructions {
+	width: 100%;
+	height: 100vh;
+	display: -webkit-box;
+	display: -moz-box;
+	display: box;
+	-webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
+	box-orient: horizontal;
+	-webkit-box-pack: center;
+	-moz-box-pack: center;
+	box-pack: center;
+	-webkit-box-align: center;
+	-moz-box-align: center;
+	box-align: center;
+	color: #ffffff;
+	text-align: center;
+	cursor: pointer;
 }
