--- a/test.css
+++ b/test.css
@@ -30,3 +30,30 @@ body{
 	text-align: center;
 	cursor: pointer;
 }
+#pointer {
+  position: absolute;
+  color: red;
+	width: 100%;
+	height: 100%;
+  z-index: 9;
+}
+#aimer {
+	width: 100%;
+	height: 100%;
+	display: -webkit-box;
+	display: -moz-box;
+	display: box;
+	-webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
+	box-orient: horizontal;
+	-webkit-box-pack: center;
+	-moz-box-pack: center;
+	box-pack: center;
+	-webkit-box-align: center;
+	-moz-box-align: center;
+	box-align: center;
+	color: rgb(255, 126, 126);
+	opacity: .6;
+	text-align: center;
+	cursor: pointer;
+}
