--- a/test.css
+++ b/test.css
@@ -17,6 +17,7 @@ body{
 	display: -webkit-box;
 	display: -moz-box;
 	display: box;
+	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 	-webkit-box-orient: horizontal;
 	-moz-box-orient: horizontal;
 	box-orient: horizontal;
