--- a/test.css
+++ b/test.css
@@ -6,6 +6,46 @@ body{
     
 }
 
+#hurt{
+	position: absolute;
+	display: none;
+	width: 100%;
+	height: 100%;
+  	background-color: rgba(250,0,0,0.5);
+  	z-index: 5;
+
+}
+#endgame{
+	position: absolute;
+	display: none;
+	width: 100%;
+	height: 100%;
+  	background-color: black;
+  	z-index: 15;
+
+}
+#endgameContent{
+	width: 100%;
+	height: 100%;
+	color: white;
+	font-family: Impact;
+	font-size: 25px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 15;
+}
+#endgameContent a{
+	border: 1px solid white;
+	color: aquamarine;
+	padding: 10px;
+	margin: 10px;
+	text-decoration: none;
+	text-align: center;
+	background: black;
+
+}
+
 #blocker {
   position: absolute;
   color: white;
@@ -93,7 +133,8 @@ body{
 	width: 155px;
 	height: 25px;
 	border-radius: 5px;
-	background: rgba(20, 240, 166, 0.884);
+	border: 1px solid aquamarine;
+	
 
 }
 .ammoCount{
@@ -107,5 +148,10 @@ body{
 	border-radius: 5px;
 	background: rgba(20, 240, 166, 0.884);
 
+}
+
+#player-health{
+	height: 100%;
+	background: rgba(20, 240, 166, 0.884);
 }
 
