--- a/test.css
+++ b/test.css
@@ -73,6 +73,12 @@ body{
 	color: #ffffff;
 	text-align: center;
 	cursor: pointer;
+	font-size: 20px;
+	font-family: sans-serif;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
 }
 #player-screen {
   position: absolute;
@@ -107,7 +113,8 @@ body{
 .orbs{
 	color: black;
 	font-family: sans-serif;
-	display: flex;
+	display: none;
+
 	width: 155px;
 	height: 60px;
 	background: rgb(250 , 250, 250, .5);
@@ -139,14 +146,18 @@ body{
 }
 .ammoCount{
 	position: absolute;
-	color: white;
-	text-align: center;
+	color: black;
+	font-size: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	left: 15px;
 	bottom: 25px;
-	width: 55px;
-	height: 45px;
+	opacity: 0.5;
+	/* width: 100px;
+	height: 55px; */
 	border-radius: 5px;
-	background: rgba(20, 240, 166, 0.884);
+	background: transparent;
 
 }
 
