--- a/test.css
+++ b/test.css
@@ -51,7 +51,8 @@ body{
   color: white;
 	width: 100%;
 	height: 100%;
-  background-color: rgba(0,0,0,0.5);
+  /* background-color: rgba(0,0,0,0.5); */
+  background-color: black;
   z-index: 10;
 }
 #instructions {
@@ -113,8 +114,8 @@ body{
 .orbs{
 	color: black;
 	font-family: sans-serif;
-	display: none;
 
+	display: none;
 	width: 155px;
 	height: 60px;
 	background: rgb(250 , 250, 250, .5);
@@ -123,6 +124,24 @@ body{
 	margin: 10px;
 	border-radius: 5px;
 	padding-right: 10px;
+}
+
+.points-container{
+	color: black;
+	font-family: sans-serif;
+	display: flex;
+	font-size: 30px;
+	width: 155px;
+	height: 60px;
+	background: rgb(250 , 250, 250, .5);
+	justify-content: center;
+	align-items: center;
+	margin: 10px;
+	border-radius: 5px;
+	padding-right: 10px;
+}
+#points{
+	
 }
 
 .orb-nums{
@@ -153,17 +172,21 @@ body{
 	justify-content: center;
 	left: 15px;
 	bottom: 25px;
-	opacity: 0.5;
+	opacity: 0.7;
 	/* width: 100px;
 	height: 55px; */
 	border-radius: 5px;
 	background: transparent;
+	transition: .2s;
+	transition-timing-function: ease-in-out;
 
 }
 
 #player-health{
 	height: 100%;
 	background: rgba(20, 240, 166, 0.884);
+	transition: .2s;
+	transition-timing-function: ease-in-out;
 }
 
 
@@ -224,4 +247,26 @@ li{
 	margin: 0;
 	padding:0;
 	padding-bottom: 10px;
+}
+
+#nextLevel{
+	transition: .2s;
+	transition-timing-function: ease-in-out;
+	padding:10px;
+	display: none;
+	position: absolute;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	color:white;
+	font-size: 40px;
+	font-weight: bold;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	background-color: rgb(0,0,0, .5);
+}
+#levelnum{
+	color: aquamarine;
 }
