--- a/test.css
+++ b/test.css
@@ -45,6 +45,39 @@ body{
 	background: black;
 
 }
+#outOfBounds{
+	position: absolute;
+	display: none;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+
+  	z-index: 150;
+
+}
+#outOfBoundsContent{
+	width: 100%;
+	height: 100%;
+	display: flex;
+	color: white;
+	font-family: Impact;
+	font-size: 25px;
+	justify-content: center;
+	align-items: center;
+	z-index: 150;
+
+}
+#outOfBoundsContent a{
+	border: 1px solid white;
+	color: aquamarine;
+	padding: 10px;
+	margin: 10px;
+	text-decoration: none;
+	text-align: center;
+	background: black;
+	z-index: 150;
+
+}
 
 #blocker {
   position: absolute;
