--- a/test.css
+++ b/test.css
@@ -196,6 +196,23 @@ body{
 	
 
 }
+.sprint{
+	position: absolute;
+	right: 45%;
+	bottom: 25px;
+	width: 155px;
+	height: 25px;
+	border-radius: 5px;
+	border: 1px solid rgb(255, 255, 255);
+}
+
+#sprint-bar{
+	height: 100%;
+	width: 100%;
+	background: rgb(255, 255, 255);
+	/* transition: .2s;
+	transition-timing-function: ease-in-out; */
+}
 .ammoCount{
 	position: absolute;
 	color: black;
