--- a/test.css
+++ b/test.css
@@ -84,8 +84,8 @@ body{
   color: white;
 	width: 100%;
 	height: 100%;
-  /* background-color: rgba(0,0,0,0.5); */
-  background-color: black;
+  background-color: rgba(0,0,0,0.5);
+  /* background-color: black; */
   z-index: 10;
 }
 #instructions {
